--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,19 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",   
+      "src": "index.js",
       "use": "@vercel/node"
     }
   ],
+  "functions": {
+    "api/*.js": {
+      "maxDuration": 60
+    }
+  },
   "routes": [
     {
-      "src": "/api/(.*)",   
-      "dest": "/index.js"     
+      "src": "/api/(.*)",
+      "dest": "/index.js"
     }
   ]
 }
